--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chrome": "^0.0.287",
+    "@types/web-bluetooth": "^0.0.20",
     "copy-webpack-plugin": "^12.0.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.7.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@systemic-games/pixels-web-connect": "^1.3.1"
   }
 }
